--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "font-awesome": "4.7.0",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
+    "jsoneditor": "^5.14.1",
     "leaflet": "1.0.3",
     "nebular-icons": "1.0.6",
     "ng2-ckeditor": "^1.1.9",
