--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "d3": "4.8.0",
     "font-awesome": "4.7.0",
     "intl": "1.2.5",
-    "ionicons": "2.0.1",
+    "ionicons": "4.4.7",
     "jsoneditor": "^5.14.1",
     "leaflet": "1.0.3",
     "nebular-icons": "1.0.6",
@@ -80,7 +80,7 @@
     "@angular/cli": "1.4.9",
     "@angular/compiler-cli": "^4.4.6",
     "@angular/language-service": "^4.4.6",
-    "@compodoc/compodoc": "^1.0.1",
+    "@compodoc/compodoc": "^1.1.6",
     "@types/d3-color": "1.0.4",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
@@ -97,7 +97,7 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "npm-run-all": "4.0.2",
-    "protractor": "~5.1.2",
+    "protractor": "^5.4.1",
     "rimraf": "2.6.1",
     "stylelint": "7.13.0",
     "ts-node": "~3.2.0",
