--- a/src/app/config/config.live.json
+++ b/src/app/config/config.live.json
@@ -1,3 +1,4 @@
 {
-    "url": "https://3klcm8k5x0.execute-api.eu-central-1.amazonaws.com/api"
+    "url": "https://3klcm8k5x0.execute-api.eu-central-1.amazonaws.com/api",
+    "fbAppId": "498860363814397"
 }
